# solar-system-opengl

./: .gitignore  CMakeLists.txt  README.md
assets/models/jupiter/: jupiter.mtl
assets/models/marte/: marte.mtl
assets/models/mercurio/: mercurio.mtl
assets/models/netuno/: netuno.mtl
assets/models/saturno/: saturno.mtl  saturno_aneis.mtl
assets/models/sol/: sol.mtl
assets/models/terra/: terra.mtl
assets/models/urano/: uranus.mtl
assets/models/venus/: venus.mtl
include/: camera.h  ring.h  solar_system.h  sphere.h  texture.h
src/: camera.cpp  esfera  main.cpp  ring.cpp  shader.cpp  solar_system.cpp  sphere.cpp  texture.cpp
